# snapshot-finance

./: .env.example  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
ai/: admin.py  models.py  urls.py  views.py
ai/migrations/: 0001_initial.py
ai/services/: client.py  generate.py  theme_gen.py  thesis_check.py  weekly_snapshot.py
ai/templates/ai/: weekly.html
ai/tests/: test_client.py  test_thesis_check.py
analysis/: analysis_utils.py  urls.py  views.py
analysis/services/: alerts.py  concentration.py  movers.py  valuation.py
analysis/templates/analysis/: _tab_alerts.html  _tab_concentration.html  _tab_movers.html  _tab_valuation.html  index.html
analysis/tests/: test_concentration.py  test_valuation.py
config/: settings.py  urls.py  wsgi.py
core/: admin.py  models.py  urls.py  views.py
core/management/commands/: create_initial_user.py
core/migrations/: 0001_initial.py  0002_seed_sectors.py
core/templates/core/: base.html  dashboard.html  login.html
core/templatetags/: fmt.py
core/tests/: test_fmt.py
home/: views.py
portfoliology/: settings.py  urls.py  wsgi.py
positions/: admin.py  models.py  portfolio_utils.py  urls.py  views.py
positions/migrations/: 0001_initial.py  0002_add_bear_case.py  0002_auto_20171029_1710.py  0003_auto_20171029_1819.py  0004_auto_20190524_2321.py
positions/services/: fundamentals.py  portfolio.py  quotes.py
positions/tests/: test_models.py  test_portfolio.py  test_quotes.py
snapshot-finance/: settings.py  wsgi.py
(+7 files in other folders)
