[project]
name = "snapshot-finance"
version = "2.0.0"
description = "Personal investing dashboard built with Django"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<5.2",
    "django-environ>=0.11,<1.0",
    "yfinance>=0.2.40,<1.0",
    "anthropic>=0.40,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]
prod = [
    "gunicorn>=22.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config", "core", "positions", "analysis", "ai"]
